force-app/main/default/objects/Commission_Adjustment__c/Commission_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Commission Adjustment</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Commission Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>