force-app/main/default/objects/Commission_Adjustment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>if( NOT(CONTAINS(Credit_Note__r.Account__r.Name, &apos;Occupational Safety Group Inc&apos;)),
Credit_Note__r.Account__r.Name,
Invoice__r.Account__r.Name

)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>