force-app/main/default/objects/Commission_Adjustment__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>Credit Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Commission Adjustments</relationshipLabel>
    <relationshipName>Commission_Adjustments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>