force-app/main/default/objects/Commission_Adjustment__c/fields/Credit_Note_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Account__c</fullName>
    <formula>Credit_Note__r.Account__r.Name</formula>
    <label>Credit Note Account</label>
    <type>Text</type>
</CustomField>