force-app/main/default/objects/Commission_Adjustment__c/fields/Custom_Memo__c.field-meta.xml
<CustomField>
    <fullName>Custom_Memo__c</fullName>
    <label>Custom Memo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>