force-app/main/default/objects/Commission_Adjustment__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <label>Date Paid</label>
    <type>DateTime</type>
</CustomField>