force-app/main/default/objects/Commission_Adjustment__c/fields/DateTime_CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>DateTime_CreatedAt__c</fullName>
    <formula>DATETIMEVALUE( CreatedDate )</formula>
    <label>DateTime CreatedAt</label>
    <type>DateTime</type>
</CustomField>