force-app/main/default/objects/Commission_Adjustment__c/fields/Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account__c</fullName>
    <formula>Invoice__r.Account__r.Name</formula>
    <label>Invoice Account</label>
    <type>Text</type>
</CustomField>