force-app/main/default/objects/Commission_Adjustment__c/fields/LearningLogin_Id__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Id__c</fullName>
    <formula>Invoice__r.LearningLogin_Id__c</formula>
    <label>LearningLogin Id</label>
    <type>Text</type>
</CustomField>