force-app/main/default/objects/Commission_Adjustment__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <formula>if ( ISBLANK(Custom_Memo__c) ,
 
if ( Invoice__c == &apos;a3Y46000000i1Ir&apos;,

if ( Amount__c &lt; 0,
&quot;Use Prepay Order #&quot; +   Credit_Note__r.Target_Order__r.OrderNumber ,

if (isblank(Credit_Note__r.Target_Order__c),
&quot;Prepay Account&quot;,
&quot;Prepay Order #&quot; +   Credit_Note__r.Target_Order__r.OrderNumber)),
 

&quot;Pay Invoice #&quot; +  Invoice__r.Name

), Custom_Memo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Memo</label>
    <type>Text</type>
</CustomField>