force-app/main/default/objects/Commission_Adjustment__c/fields/Payout__c.field-meta.xml
<CustomField>
    <fullName>Payout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payout</label>
    <referenceTo>Commission_Payout__c</referenceTo>
    <relationshipLabel>Commission Adjustments</relationshipLabel>
    <relationshipName>Commission_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>